# katie

./: .gitignore  CMakeLists.txt  README
cmake/: KatieConfig.cmake  arch.cpp  dbg.sh.cmake  exec.sh.cmake
cmake/modules/: KatieBuildMacros.cmake  OptimizeHeaders.cmake
package/archlinux/: PKGBUILD
package/debian/: control
package/freebsd/: Makefile  pkg-plist
scripts/: genlocale.py  genmap.py  genutf.py  incfsck.py  namefsck.py  updatetranslations.py
src/core/: CMakeLists.txt  qcorecommon_p.h
src/core/codecs/: qtextcodec.cpp
src/core/global/: qconfig.cpp.cmake  qconfig.h.cmake  qglobal.cpp  qglobal.h  qlibraryinfo.cpp  qlibraryinfo.h  qnamespace.h  qnamespace.qdoc
src/core/io/: qdebug.h  qdir.cpp  qdir.h  qfilesystemengine_unix.cpp  qprocess.cpp  qprocess_p.h  qprocess_unix.cpp  qsettings.cpp  qstandardpaths.cpp  qtextstream.cpp  qtldurl.cpp
src/core/kernel/: qabstractitemmodel.cpp  qcore_mac_p.cpp  qcore_mac_p.h  qcore_unix_p.h  qcoreapplication.cpp  qcoreevent.cpp  (+8 more)
src/dbus/: qdbusabstractadaptor.cpp  qdbusabstractinterface.cpp  qdbusintegrator.cpp  qdbusmetaobject.cpp  qdbusmisc.cpp  qdbuspendingcall.cpp  qdbusthreaddebug_p.h  qdbusxmlgenerator.cpp
src/gui/: CMakeLists.txt  qguicommon_p.h
src/network/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/svg/: CMakeLists.txt  qsvgtinydocument.cpp  qsvgtinydocument_p.h
src/test/: qtest_gui.h  qtestcase.cpp  qtestmouse.h
src/tools/: CMakeLists.txt
src/uitools/: quiloader.cpp  quiloader_p.h
tests/: CMakeLists.txt
tests/auto/: network-settings.h
translations/: qt.pot  qt_tools.pot
(+302 files in other folders)
